--- a/openx-cloud-wm-distribution/jenkins/deploy/Jenkinsfile
+++ b/openx-cloud-wm-distribution/jenkins/deploy/Jenkinsfile
@@ -2,19 +2,8 @@ package deploy
 
 pipeline {
 
-    options {
-        // Connection of the Gitlab Pipeline process
-        gitLabConnection('Gitlab')
-        gitlabCommitStatus(name: 'jenkins')
-    }
-
-
-    environment {
-        MAVEN_ARTIFACT_ID = readMavenPom().getArtifactId()
-        VERSION = readMavenPom().getVersion()
-
-    }
-
+ agent any
+ 
     stages {
         stage('Check Java'){
             steps{
@@ -37,20 +26,16 @@ pipeline {
                 }
             }
         }
-        stage('Sonar Analysis') {
-            steps {
-                withMaven(options: [artifactsPublisher(disabled: true)], jdk: 'jdk8', maven: 'Maven 3.5') {
-                    sh 'mvn sonar:sonar'
-                }
-            }
-        }
-
+        
         stage('Deploy artifact') {
+        when{
+       	 branch 'master'
+        }
             steps {
                 withMaven(options: [artifactsPublisher(disabled: true)], jdk: 'jdk8', maven: 'Maven 3.5') {
                     sh 'mvn deploy'
-                }
             }
+           }
         }
     }
 }
